--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,13 +8,17 @@ html {
 
 /* Header */
 
-header {
+.headercontainer {
   display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+header {
   height: 69px;
   width: 100%;
-  align-items: center;
   position: fixed;
-  justify-content: space-between;
+  align-items: center;
   border-bottom: 1px solid seashell;
   z-index: 1;
 }
@@ -29,4 +33,34 @@ nav a {
   text-decoration: underline;
   padding-left: 15px;
   padding-right: 15px;
+  position: inline-block;
+}
+
+/* CONTENT CONTAINER */
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+/* 1. Mission statement */
+
+.mission-statement {
+  position: relative;
+  top: 70px;
+  display: flex;
+  height: 700px;
+  width: 1200px;
+  background-image: url("../images/img-mission-background.jpg");
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.mission-text {
+  background-color: black;
+  width: 100%;
 }
