--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -115,7 +115,7 @@ nav a {
   height: 500px;
   width: 1200px;
   display: flex;
-  background-image: url("https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg");
+  background-image: url("../images/img-locations-background.jpg");
   background-position: center;
   flex-direction: column;
   justify-content: center;
